<resources>
    <string name="app_name">lesson2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="Comma">.</string>
    <string name="equals">=</string>
    <string name="division">÷</string>
    <string name="cleanOff">C</string>
    <string name="percent">%</string>
    <string name="delete">⌫</string>
    <string name="settings">⋮</string>
    <string name="material_dark">Темная тема</string>
    <string name="material_light">Светлая тема</string>
    <string name="material_green">Зеленая тема</string>
    <string name="material_orange">Оранжевая тема</string>
    <string name="text_button_back"><![CDATA[<]]></string>
</resources>